Outer space is sky blue - and here's one we prepared earlier!

--- a/radiance/index.html
+++ b/radiance/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-  
-    <title>Radiance</title>
-  </head>
-  <body>
-    <canvas id="my-canvas" width="1280" height="720"></canvas>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>03: Tracer</title>
+  <link type="text/css" rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <canvas id="my-canvas" width="1280" height="720"></canvas>
+  <script type="module" src="./main.js"></script>
+</body>
+
 </html>
