--- a/radiance/index.html
+++ b/radiance/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <canvas id="my-canvas" width="1280" height="720"></canvas>
+  <canvas id="my-canvas" width="320" height="180"  
+    style="width: 1280px; height: 720px;"
+  ></canvas>
   <script type="module" src="./main.js"></script>
 </body>
 
