--- a/radiance/index.html
+++ b/radiance/index.html
@@ -5,15 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>03: Tracer</title>
+  <title>12: Multiple Workers</title>
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <canvas id="my-canvas" width="1280" height="720"  
-    style="width: 1280px; height: 720px;"
-  ></canvas>
-  <script type="module" src="./main.js"></script>
+  <canvas id="my-canvas" width="1280" height="720" style="width: 1280px; height: 720px;"></canvas>
+  <form>
+    <input type="button" id="render-button" name="renderButton" value="Render" />
+    <input type="button" id="cancel-button" name="cancelButton" value="Cancel" />
+  </form>
+  <script type="module" src="./main.js">
+  </script>
 </body>
 
 </html>
